--- a/divar-Index-Home/index.html
+++ b/divar-Index-Home/index.html
@@ -178,61 +178,61 @@
           <ul class="list-group border-bottom pb-3">
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-building"></i> &nbsp;&nbsp;
+                <i class="bi bi-building pe-3"></i>
                 املاک
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-car-front-fill"></i> &nbsp;&nbsp;
+                <i class="bi bi-car-front-fill pe-3"></i>
                 وسایل نقلیه
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-phone"></i> &nbsp;&nbsp;
+                <i class="bi bi-phone pe-3"></i>
                 کالای دیجیتال
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-lamp"></i> &nbsp;&nbsp;
+                <i class="bi bi-lamp pe-3"></i>
                 خانه و آشپزخانه
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-brush"></i> &nbsp;&nbsp;
+                <i class="bi bi-brush pe-3"></i>
                 خدمات
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-watch"></i> &nbsp;&nbsp;
+                <i class="bi bi-watch pe-3"></i>
                 وسایل شخصی
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-dice-6"></i> &nbsp;&nbsp;
+                <i class="bi bi-dice-6 pe-3"></i>
                 سرگرمی و فراغت
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-people"></i> &nbsp;&nbsp;
+                <i class="bi bi-people pe-3"></i>
                 اجتماعی
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-door-closed"></i> &nbsp;&nbsp;
+                <i class="bi bi-door-closed pe-3"></i>
                 تجهیزات و صنعتی
               </a>
             </li>
             <li class="list-group-item border-0">
               <a class="d-flex flex-row text-muted fs-8 text-black-hover" href="#">
-                <i class="bi bi-briefcase"></i> &nbsp;&nbsp;
+                <i class="bi bi-briefcase pe-3"></i>
                 استخدام و کاریابی
               </a>
             </li>
@@ -242,7 +242,7 @@
               <a class="text-muted fs-8 w-100 p-3 text-black-hover" onclick="sidebarButtons_animation('selectAreaIcon')"
                 data-bs-toggle="collapse" data-bs-target="#selectArea" href="#">
                 <label id="selectAreaIcon" class="transition-all-1s"><i
-                    class="bi bi-caret-down"></i></label>&nbsp;&nbsp;محل
+                    class="bi bi-caret-down pe-3"></i></label>محل
               </a>
 
               <div id="selectArea" class="collapse">
@@ -260,7 +260,7 @@
                 onclick="sidebarButtons_animation('selectAmountIcon')" data-bs-toggle="collapse"
                 data-bs-target="#selectAmount" href="#">
                 <label id="selectAmountIcon" class="transition-all-1s"><i
-                    class="bi bi-caret-down"></i></label>&nbsp;&nbsp;قیمت
+                    class="bi bi-caret-down pe-3"></i></label>قیمت
               </a>
             </div>
 
@@ -286,7 +286,7 @@
                 onclick="sidebarButtons_animation('selectCustomerStateIcon')" href="#" data-bs-toggle="collapse"
                 data-bs-target="#selectCustomerState">
                 <label id="selectCustomerStateIcon" class="transition-all-1s"><i
-                    class="bi bi-caret-down"></i></label>&nbsp;&nbsp;وضعیت آگهی
+                    class="bi bi-caret-down pe-3"></i></label>وضعیت آگهی
               </a>
             </div>
 
@@ -470,7 +470,7 @@
                     <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
                       onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                       id="city_id" href="#">
-                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      <label class="transition-all-1s"><i class="bi bi-caret-left pe-3"></i></label>آذربایجان
                       غربی
                     </a>
                   </div>
@@ -484,7 +484,7 @@
                     <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
                       onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                       id="city_id" href="#">
-                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      <label class="transition-all-1s"><i class="bi bi-caret-left pe-3"></i></label>آذربایجان
                       غربی
                     </a>
                   </div>
@@ -498,7 +498,7 @@
                     <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
                       onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                       id="city_id" href="#">
-                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      <label class="transition-all-1s"><i class="bi bi-caret-left pe-3"></i></label>آذربایجان
                       غربی
                     </a>
                   </div>
@@ -512,7 +512,7 @@
                     <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
                       onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                       id="city_id" href="#">
-                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      <label class="transition-all-1s"><i class="bi bi-caret-left pe-3"></i></label>آذربایجان
                       غربی
                     </a>
                   </div>
@@ -526,7 +526,7 @@
                     <a class="text-muted d-flex flex-row-reverse justify-content-between fs-8 w-100 py-3 text-black-hover"
                       onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                       id="city_id" href="#">
-                      <label class="transition-all-1s"><i class="bi bi-caret-left"></i></label>&nbsp;&nbsp;آذربایجان
+                      <label class="transition-all-1s"><i class="bi bi-caret-left pe-3"></i></label>آذربایجان
                       غربی
                     </a>
                   </div>
@@ -545,7 +545,7 @@
                 <a class="text-dark fs-11 w-100 p-3 ps-0 d-flex"
                   onclick="document.querySelector('#sectionShowAreas').classList.toggle('d-none'); document.querySelector('#sectionShowCities').classList.toggle('d-none');"
                   href="#">
-                  <label class="text-muted fs-5"><i class="bi bi-arrow-right"></i></label>&nbsp;&nbsp;همه شهرها
+                  <label class="text-muted fs-5"><i class="bi bi-arrow-right pe-3"></i></label>همه شهرها
                 </a>
               </div>
 
@@ -556,8 +556,8 @@
                   <li>
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
-                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-فردیس"
-                        onclick="selectCityfromArea('فردیس', this.checked)">&nbsp;&nbsp;فردیس
+                      <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-فردیس"
+                        onclick="selectCityfromArea('فردیس', this.checked)">فردیس
                     </a>
                   </li>
                   <!-- End Each City -->
@@ -565,8 +565,8 @@
                   <li>
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
-                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-کرج"
-                        onclick="selectCityfromArea('کرج', this.checked)">&nbsp;&nbsp;کرج
+                      <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-کرج"
+                        onclick="selectCityfromArea('کرج', this.checked)">کرج
                     </a>
                   </li>
                   <!-- End Each City -->
@@ -574,8 +574,8 @@
                   <li>
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
-                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-گوهردشت"
-                        onclick="selectCityfromArea('گوهردشت', this.checked)">&nbsp;&nbsp;گوهردشت
+                      <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-گوهردشت"
+                        onclick="selectCityfromArea('گوهردشت', this.checked)">گوهردشت
                     </a>
                   </li>
                   <!-- End Each City -->
@@ -583,8 +583,8 @@
                   <li>
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
-                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-زورآباد"
-                        onclick="selectCityfromArea('عظیمیه جنوبی (اسلام آباد)', this.checked)">&nbsp;&nbsp;زورآباد
+                      <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-زورآباد"
+                        onclick="selectCityfromArea('عظیمیه جنوبی (اسلام آباد)', this.checked)">زورآباد
                     </a>
                   </li>
                   <!-- End Each City -->
@@ -592,8 +592,8 @@
                   <li>
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
-                      <input class="city-tag-checkbox mx-5" type="checkbox" name="" id="checkbox-tag-عظیمیه"
-                        onclick="selectCityfromArea('عظیمیه', this.checked)">&nbsp;&nbsp;عظیمیه
+                      <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-عظیمیه"
+                        onclick="selectCityfromArea('عظیمیه', this.checked)">عظیمیه
                     </a>
                   </li>
                   <!-- End Each City -->
