--- a/C#/divar-Index-Home/index.html
+++ b/C#/divar-Index-Home/index.html
@@ -93,6 +93,12 @@
                       </div>
                     </div>
                   </a>
+                  
+                <a href="" data-bs-toggle="modal" data-bs-target="#login-user-modal"
+                      class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s">
+                                                      <span>ورود</span>
+                      <i class="bi bi-box-arrow-right"></i>
+                </a>
                   <a href="" class="dropdown-item px-5 text-black-muted-cs border-bottom py-3 transition-bgcolor-1s ">
                     <span>آگهی های من</span>
                     <i class=" fs-8 bi bi-book pe-1"></i>
@@ -697,6 +703,54 @@
     </div>
   </div>
 <!-- modal of categories -->
+    <!-- modal login user -->
+  <div class="modal fade " id="login-user-modal">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-3">
+        <div class="modal-header p-4 w-100">
+          <div class="d-flex justify-content-between w-100">
+            <span class="btn btn-close" data-bs-dismiss="modal"></span>
+            <h5>ورود به حساب کاربری</h5>
+          </div>
+        </div>
+        <div class="modal-body ">
+          <h4 class="text-start px-2 py-3">ایمیل خود را وارد کنید</h4>
+          <p dir="rtl" class="fs-8 p-2 text-muted">برای استفاده از امکانات دیوار، لطفاً ایمیل خود را وارد کنید. کد تأیید
+            به این ایمیل ارسال خواهد شد.</p>
+          <div>
+            <!-- email -->
+            <form id="form-register-login" action="/" class="form-inline py-3">
+              <div class="input-group">
+                <input type="text" name="" 
+                  id="email-form-register-login"
+                  class="form-control p-2"
+                  placeholder="temp@temp.org">
+              </div>
+              <!-- email -->
+              <div class="terms py-4 fs-8 text-start border-bottom pb-5">
+                <span>
+                  <a href="#" class="text-color-brand">شرایط استفاده از خدمات</a>
+                  و
+                  <a href="#" class="text-color-brand">
+                    حریم خصوصی
+                  </a>
+                  دیوار را می پذیرم
+                </span>
+              </div>
+              <div class=" d-flex">
+                <input  type="submit" id="btn-confirm-login-user"
+                value="تایید"
+                 class="mt-3 btn bg-color-brand text-white px-5 py-2 fs-5 ms-auto">        
+              </div>
+            </form>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <!-- modal login user -->
 
 
   <script src="./JS/jquery-3.6.1.slim.min.js"></script>
