fix route errors

--- a/FrontEnd/02.divar-home-index/index.html
+++ b/FrontEnd/02.divar-home-index/index.html
@@ -7,11 +7,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- custom css -->
   <link rel="stylesheet" href="../CSS/bootstrap.rtl.min.css" />
-  <link rel="stylesheet" href="./Main.css" />
-  <link rel="stylesheet" href="./CSS/footer.css" />
   <link rel="stylesheet" href="./CSS/header.css" />
   <link rel="stylesheet" href="./CSS/main-card.css" />
-  <link rel="stylesheet" href="./CSS/modal-categoris.css" />
   <link rel="stylesheet" href="./CSS/modal-city.css" />
   <link rel="stylesheet" href="./CSS/sidebar.css" />
   <link rel="stylesheet" href="./CSS/style.css" />
@@ -591,7 +588,7 @@
                     <a class="text-dark d-flex flex-row-reverse justify-content-between fs-11 w-100 my-3 p-2 py-0 d-flex"
                       href="#">
                       <input class="city-tag-checkbox mx-5 pe-3" type="checkbox" name="" id="checkbox-tag-زورآباد"
-                        onclick="selectCityfromArea('عظیمیه جنوبی (اسلام آباد)', this.checked)">زورآباد
+                        onclick="selectCityfromArea('زورآباد', this.checked)">زورآباد
                     </a>
                   </li>
                   <!-- End Each City -->
